--- a/pyfarm/agent/templates/pyfarm/agent/index.html
+++ b/pyfarm/agent/templates/pyfarm/agent/index.html
@@ -22,5 +22,9 @@
             {% endfor %}
         </tbody>
     </table>
+    <b>TODO: </b>Change background color for certain states (low ram,
+    disconnected state, etc)
+    <br />
+    <b>TODO: </b>Controls to change some of the above values
     </body>
 </html>
