--- a/pyfarm/agent/static/css/index_table.css
+++ b/pyfarm/agent/static/css/index_table.css
@@ -5,27 +5,26 @@
     width: 480px;
     text-align: left;
     border-collapse: collapse;
+    border-bottom: 1px solid #fff;
 }
 
 #box-table th {
     font-size: 13px;
-    font-weight: normal;
+    font-weight: bolder;
     padding: 8px;
-    background: #b9c9fe;
-    border-top: 4px solid #aabcfe;
+    background: #8b8b8b;
     border-bottom: 1px solid #fff;
-    color: #039;
+    color: #000000;
 }
 
 #box-table td {
     padding: 8px;
-    background: #e8edff;
+    background: #c0c0c0;
     border-bottom: 1px solid #fff;
-    color: #669;
-    border-top: 1px solid transparent;
+    color: #000000;
 }
 
 #box-table tr:hover td {
-    background: #d0dafd;
-    color: #339;
+    background: #ebebeb;
+    color: #000000;
 }
