adding missing 415 status

--- a/pyfarm/agent/templates/pyfarm/assign.html
+++ b/pyfarm/agent/templates/pyfarm/assign.html
@@ -23,6 +23,8 @@
                 Check the response for help.</li>
             <li><b>409 CONFLICT</b> -
                 The provided task is already running on this machine</li>
+            <li><b>415 UNSUPPORTED MEDIA TYPE</b> -
+                Be sure you've set application/json as the content type.</li>
             <li><b>503 SERVICE UNAVAILABLE</b> -
                 There are not enough available resources to handle the
                 requested task at this time</li>
