--- a/pyfarm/agent/templates/pyfarm/assign.html
+++ b/pyfarm/agent/templates/pyfarm/assign.html
@@ -39,21 +39,21 @@
             "job": 1,
             "task": 7,
             "user": "bob",  # optional, ignored on windows
-            "job": {
-                "jobtype": "pyfarm.jobtypes.foo.Bar",
+            "jobtype": {
+                "import": "pyfarm.jobtypes.foo.Bar",
                 "cmd": "foo",
                 "args" "-s %(start_frame)s -e %(end_frame)s -b %(by_frame)s -c %(cpus)s"
             },
-            "resources": {
+            "resources": {  # optional
                 "cpus": 2,
-                "ram": 1024,
-                "ram_warning": 900,  # if not present, default to -1 (not set)
-                "ram_max": 1200,  # if not present, default to -1 (not set)
+                "ram": 1024,  # required if the other two ram fields are set
+                "ram_warning": 900,
+                "ram_max": 1200
             },
             "frame": {
                 "start_frame": 7.0,
                 "end_frame": 7.0,  # if not present, defaults to `start_frame`
-                "by_frame": 1.0,  # if not present, defaults to 1.0
+                "by_frame": 1.0  # if not present, defaults to 1.0
             },
             "env": {  # optional, updates the environment on the host at runtime
                 "FOO": "foo",
