--- a/pyfarm/agent/templates/pyfarm/assign.html
+++ b/pyfarm/agent/templates/pyfarm/assign.html
@@ -35,34 +35,47 @@
         converted to json (application/json) before being transmitted.
         <pre>
         {
+            # required
             "project": 42,
             "job": 1,
             "task": 7,
-            "user": "bob",  # optional, ignored on windows
+
+            # required
             "jobtype": {
                 "import": "pyfarm.jobtypes.foo.Bar",
                 "cmd": "foo",
                 "args" "-s %(start_frame)s -e %(end_frame)s -b %(by_frame)s -c %(cpus)s"
             },
-            "resources": {  # optional
-                "cpus": 2,
-                "ram": 1024,  # required if the other two ram fields are set
-                "ram_warning": 900,
-                "ram_max": 1200
-            },
+
+            # At least start_frame is required.
+            #   by_frame - defaults to 1 if not provided
+            #   end_frame - defaults to start_frame if not provided
             "frame": {
                 "start_frame": 7.0,
                 "end_frame": 7.0,  # if not present, defaults to `start_frame`
                 "by_frame": 1.0  # if not present, defaults to 1.0
             },
-            "env": {  # optional, updates the environment on the host at runtime
+
+            # optional
+            "resources": {
+                "cpus": 2,
+                "ram": 1024,
+                "ram_warning": 900,
+                "ram_max": 1200
+            },
+
+            # optional
+            # all keys and values must be strings
+            "env": {
                 "FOO": "foo",
                 "BAR": "bar"
             },
-            "data": {  # optional, data passed into the job type at runtime
-                "project": "/projects/42",
-                "output": "/projects/42/foo"
-            }
+
+            # optional, supports any type you wish to use
+            "data": {}
+
+            # optional, ignored on Windows
+            "user": "bob",
         }
         </pre>
 
