removing url var

--- a/pyfarm/agent/templates/pyfarm/assign.html
+++ b/pyfarm/agent/templates/pyfarm/assign.html
@@ -10,7 +10,7 @@
     <h2>Agent Assignment Parameters</h2>
     <p>
         To assign work to this agent you may send a <i>POST</i> request to
-        <a href="{{uri}}">{{uri}}</a>.  Below is a list of response codes you
+        <a href="/assign">/assign</a>.  Below is a list of response codes you
         should normally expect to handle.  Any response code other than those
         listed below should be considered an unhandled error that warrants
         being retried.
