adding remaining POST tests for /assign

--- a/pyfarm/agent/templates/pyfarm/assign.html
+++ b/pyfarm/agent/templates/pyfarm/assign.html
@@ -17,7 +17,9 @@
 
         <ul>
             <li><b>201 ACCEPTED</b> -
-                task was accepted successfully</li>
+                task was accepted successfully, the response body will contain
+                 a uuid4 string which can be used for tracking purposes
+            </li>
             <li><b>400 BAD REQUEST</b> -
                 there's something wrong with the data that was provided.
                 Check the response for help.</li>
