--- a/pyfarm/agent/http/templates/layout.html
+++ b/pyfarm/agent/http/templates/layout.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% block head %}
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>PyFarm:Agent - {% block title %}{% endblock %}</title>
+    <title>PyFarm:Agent - {% block title %}{% endblock %}</title>
 
-        <!-- Bootstrap core CSS -->
-        <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
-        <!-- Custom styles for this template -->
-        <link href="/static/css/navbar.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="/static/css/navbar.css" rel="stylesheet">
 
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
-            <script src="/static/js/html5shiv-3.7.0.js"></script>
-            <script src="/static/js/respond-1.4.2.min.js"></script>
-        <![endif]-->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+        <script src="/static/js/html5shiv-3.7.0.js"></script>
+        <script src="/static/js/respond-1.4.2.min.js"></script>
+    <![endif]-->
+    {% endblock %}
 </head>
 <body>
     <!-- Fixed navbar -->
@@ -34,7 +36,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">Resources</a></li>
+                    <li class="active"><a href="/">System</a></li>
                     <li><a href="/processes">Processes</a></li>
                     <li><a href="/tasks">Tasks</a></li>
                     <li><a href="/logging">Logging</a></li>
@@ -55,10 +57,12 @@
         </div>
     </div>
     <div class="container">
-        <!-- Main component for a primary marketing message or call to action -->
-        <div class="jumbotron">
-            {% block content %}{% endblock %}
-        </div>
+        {% if state() in ("disabled", "offline") %}
+            <p class="bg-warning">
+                This agent is currently offline or disabled.
+            </p>
+        {% endif %}
+        {% block content %}{% endblock %}
     </div> <!-- /container -->
     <script src="/static/js/jquery-1.11.0.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
