--- a/pyfarm/agent/http/templates/layout.html
+++ b/pyfarm/agent/http/templates/layout.html
@@ -22,7 +22,6 @@
     {% endblock %}
 </head>
 <body>
-    <!-- Fixed navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -36,7 +35,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">System</a></li>
+                    <li class="dropdown">
+                        <a href="/" class="dropdown-toggle" data-toggle="dropdown">System <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/">Hardware</a></li>
+                            <li><a href="/configuration">Configuration</a></li>
+                        </ul>
+                    </li>
                     <li><a href="/processes">Processes</a></li>
                     <li><a href="/tasks">Tasks</a></li>
                     <li><a href="/logging">Logging</a></li>
