--- a/pyfarm/agent/http/templates/configuration.html
+++ b/pyfarm/agent/http/templates/configuration.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Information{% endblock %}
+{% block title %}Configuration{% endblock %}
 {% block head %}
     {{ super() }}
     <style type="text/css">
