--- a/pyfarm/agent/http/templates/layout.html
+++ b/pyfarm/agent/http/templates/layout.html
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">{{ hostname ()}}</a>
+                <a class="navbar-brand" href="/">{{ agent_hostname() }}</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
